# delta-ruby

./: CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  deltalake-rb.gemspec
.github/workflows/: build.yml  release.yml
ext/deltalake/: Cargo.toml  extconf.rb
ext/deltalake/src/: error.rs  features.rs  lib.rs  merge.rs  schema.rs  utils.rs
lib/: deltalake-rb.rb  deltalake.rb
lib/deltalake/: field.rb  metadata.rb  schema.rb  table.rb  table_alterer.rb  table_merger.rb  table_optimizer.rb  utils.rb  version.rb
test/: alter_test.rb  merge_test.rb  optimize_test.rb  table_test.rb  test_helper.rb  types_test.rb  write_test.rb
