[package]
name = "deltalake"
version = "0.1.1"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.70.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "52", features = ["ffi"] }
arrow-schema = { version = "52", features = ["serde"] }
chrono = "0.4"
deltalake = { version = "=0.21.0", features = ["datafusion", "s3"] }
futures = "0.3"
magnus = "0.7"
num_cpus = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
