[package]
name = "deltalake"
version = "0.1.7"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
rust-version = "1.82.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "55", features = ["ffi"] }
arrow-schema = { version = "55", features = ["serde"] }
chrono = "0.4"
delta_kernel = "=0.10.0"
deltalake = { version = "=0.26.0", features = ["azure", "datafusion", "gcs", "s3"] }
futures = "0.3"
magnus = "0.7"
num_cpus = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
